# OpenCL_Attractor-rust

./: Cargo.toml
src/: kernel.cl  lib.rs  main.rs
src/kernel/: complex.cl  draw_image.cl  main.cl  util.cl
src/kernel/mwc64x/: skip_mwc.cl
src/opencl/: mod.rs  thread.rs
src/repl/: mod.rs
src/ui/: mod.rs  support.rs
src/ui/support/: mod.rs
src/ui_cli/: mod.rs
