[package]
name = "opencl_attractor"
version = "0.1.0"
authors = ["FredericaBernkastel <bernkastel.frederica@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
ocl = "0.19"
dialoguer = "0.5.0"
indicatif = "0.13.0"
term-painter = "0.2.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1