[package]
name = "opencl_attractor"
version = "0.2.3"
authors = ["FredericaBernkastel <bernkastel.frederica@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
ocl = "0.19"
rustyline = "5.0.5"
indicatif = "0.13.0"
term-painter = "0.2.4"
clap = "2.33.0"
image = "0.22.3"
rand = "0.7.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1